5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1807_2572.log
== TEST (2019-06-13 15:03:37) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(6, dtype=int)
i=0
for i in range(size(matricula)):
	if(matricula[i]/2 != 0):
		vet=vet[i]+1
print(vet)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:06:48) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(6, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		nimpar= nimpar + 1	 
print(nimpar)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:08:48) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet= vet[i]	 
print(nimpar)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:10:05) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
i=0
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		i= i+1	 
print(i)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:11:31) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
i=0
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet=matricula[i]
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:11:46) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
i=0
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet=matricula[i] + 1
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:12:00) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
i=0
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet=matricula[i] 
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:15:16) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
i=0
gp1=0
gp2=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		gp2= gp2 + 1
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:15:45) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
gp1=0
gp2=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		gp2= gp2 + 1
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:16:52) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		nimpar= nimpar + 1
print(nimpar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:18:28) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		nimpar= nimpar + 1
print(nimpar)
for i in range(size(matricula)):
	vet[i]= nimpar[i]
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:18:35) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		nimpar= nimpar + 1
print(nimpar)
for i in range(size(matricula)):
	vet[i]= nimpar[i]
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:20:33) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		nimpar= nimpar + 1
print(nimpar)

for i in range(size(matricula)):
	vet[i]=vet[i] + 1 
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:21:25) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		nimpar= nimpar + 1
print(nimpar)

for i in range(size(vet)):
	vet[i]=vet[i] + 1 
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:24:48) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		nimpar= nimpar + 1
print(nimpar)

for i in range(size(vet)):
	vet[i]=vet[0] + 1 
print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:26:29) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= vet[i]
print(vet)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:26:39) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= vet[i] + 1
print(vet)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:27:57) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= matricula[i]
print(vet)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:28:21) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= matricula[i]
print(vet)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:28:59) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= matricula[i]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:32:29) 
-- CODE:
from numpy import*

matricula= array(eval(input('matricula:')))
vet = zeros(2, dtype=int)
nimpar=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= matricula[2]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:35:14) 
-- CODE:
from numpy import * 

matricul= array(eval(input('matricula:')))
vet= zeros (2, dtype=int)
i=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= matricula[i]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:35:37) 
-- CODE:
from numpy import * 

matricula= array(eval(input('matricula:')))
vet= zeros (2, dtype=int)
i=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= matricula[i]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:35:48) 
-- CODE:
from numpy import * 

matricula= array(eval(input('matricula:')))
vet= zeros (2, dtype=int)
i=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
	vet[i]= matricula[i]
print(vet)
-- ERROR:
File "XXXX", line 8
    vet[i]= matricula[i]
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:36:02) 
-- CODE:
from numpy import * 

matricula= array(eval(input('matricula:')))
vet= zeros (2, dtype=int)
i=0
for i in range(size(matricula)):
	if(matricula[i] % 2 != 0):
		vet[i]= matricula[i]
	print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
